# Chip8

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
chip/: Cargo.toml
chip/benches/: my_benchmark.rs
chip/src/: definitions.rs  devices.rs  error.rs  lib.rs  opcode.rs  runner.rs  timer.rs
chip/src/chip8/: chipset.rs  mod.rs  opcodes.rs  print.rs  tests.rs
chip/src/resources/: mod.rs
chip8_lib/: Cargo.toml
chip8_lib/src/: chip8.rs  definitions.rs  devices.rs  lib.rs  opcode.rs  resources.rs
gui/: Cargo.toml  index.html  style.css  style.scss
gui-old/: Cargo.toml
gui-old/src/: adapters.rs  exported.rs  utils.rs
gui/src/: adapter.rs  adapters.rs  controller.rs  definitions.rs  error.rs  event_bus.rs  exported.rs  helpers.rs  lib.rs  main.rs  model.rs  observer.rs  setup.rs  timer.rs  utils.rs  wrappers.rs
gui/src/gui/: mod.rs
gui/tests/: test.rs
src/: main.rs
src/chip8_lib/: chip8.rs  opcode.rs
src/gui/: lib.rs  mod.rs  observer.rs
src/lib/: chip8.rs  definitions.rs  devices.rs  fontset.rs  lib.rs  mod.rs  opcode.rs  resources.rs  timer.rs
src/lib/chip8/: chipset.rs  mod.rs  print.rs  tests.rs
src/lib/resources/: c8games.zip:Zone.Identifier  mod.rs
www/: index.html  index.js  package-lock.json  package.json  style.css  styles.css  webpack.config.js
