[package]
name = "chip8"
version = "0.1.0"
authors = ["TheBlueFireFox <adrian.hornung@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="chip8_lib"
path="src/chip8_lib/lib.rs"
doctest=true

[dependencies]
zip = "0.5.8"
rand = "0.7.3"
num = "0.3.0"
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.8.3"

[profile.release]
panic = 'abort'
