[package]
name = "chip8"
version = "0.1.0"
authors = ["TheBlueFireFox <adrian.hornung@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="chip"
path="src/lib/lib.rs"

[dependencies]
zip = "0.5"
rand = "0.7"
num = "0.3"
lazy_static = "1.4"
# iced = "0.2"

[dev-dependencies]
mockall = "0.8"

[profile.release]
panic = 'abort'
