[package]
name = "chip8"
version = "0.1.0"
authors = ["TheBlueFireFox <adrian.hornung@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="chip"
path="src/lib/lib.rs"

[dependencies]
zip = "0.5"
rand = "0.7"
num = "0.3"
lazy_static = "1.4"
crossterm = "0.18"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }
cfg-if = "1.0" # used for random mocks

[dev-dependencies]
mockall = "0.8"

[profile.release]
panic = 'abort'
