[package]
authors = ["TheBlueFireFox <adrian.hornung@yahoo.de>"]
description = "A chip8 backend written in rust"
edition = "2018"
license = "GPL-3.0-only"
name = "chip8"
repository = "https://github.com/TheBlueFireFox/Chip8"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
js = ["getrandom/js"]

[lib]
name = "chip"
path = "src/lib.rs"

[dependencies]
getrandom = {version = "0.2"}
hashbrown = "0.12.2"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
parking_lot = "0.12.1"
rand = {version = "0.8", default-features = false, features = ["getrandom"]}
thiserror = "1.0"
tinyvec = "1.3.1"
zip = {version = "0.6.2", default-features = false, features = ["deflate"]}

[dev-dependencies]
criterion = "0.3"
mockall = "0.11.1"
rand = "0.8"

[[bench]]
harness = false
name = "my_benchmark"
