[package]
authors = ["TheBlueFireFox <adrian.hornung@yahoo.de>"]
description = "A chip8 backend written in rust"
edition = "2018"
license = "GPL-3.0-only"
name = "chip8"
repository = "https://github.com/TheBlueFireFox/Chip8"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
js = ["getrandom/js"]

[lib]
name = "chip"
path = "src/lib.rs"

[dependencies]
log = "0.4"

rand = {version = "0.8", default-features = false, features = ["getrandom"]}
getrandom = { version = "0.2", default-features = false }

hashbrown = "0.12.2"
tinyvec = "1.6.0"
once_cell = {version = "1.13.0", features = ["parking_lot"]}
num-traits = "0.2"
parking_lot = "0.12.1"
thiserror = "1.0"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.3"
mockall = "0.11"
rand = "0.8"

[[bench]]
harness = false
name = "my_benchmark"
