[package]
name = "chip8_lib"
version = "0.1.0"
authors = ["TheBlueFireFox <adrian.hornung@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.6"
rand = "0.7.3"
num = "0.3.0"

[dev-dependencies]
mockall = "0.7.2"