[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
chip8 = { path = "../chip", default-features = false, features = ["js"] }
web-sys = {version = "0.3.58", default-features = false, features = ["HtmlSelectElement"]}
wasm-logger = "0.2.0"
log = "0.4.17"
