[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
chip8 = { path = "../chip", default-features = false, features = ["js"] }
web-sys = {version = "0.3.58", default-features = false, features = ["HtmlSelectElement"]}
wasm-logger = "0.2.0"
thiserror = "1.0"
log = "0.4.17"
gloo = "0.8.0"
parking_lot = "0.12.1"
itertools = "0.10.3"
custom_debug = "0.5.0"
once_cell = {version = "1.13.0", features = ["parking_lot"] }
yew-agent = "0.1.0"
